Key load/store fix